# EduConnect-Backend

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py  promote_user.py
app/blueprints/: lessons.py  series.py  tracking.py  tracking_proxy.py  users.py  users_proxy.py
app/clients/: media_client.py  user_client.py
app/dependencies/: auth.py
app/middleware/: auth.py
app/routers/: lessons.py  series.py  users.py
app/schemas/: common.py  lesson.py  serie.py
app/schemas.py/: lesson.py  serie.py  user.py
app/services/: lesson_service.py  serie_service.py  user_service.py
app/static/: openapi.yaml
app/utils/: cache.py  json_encoder.py  mongodb.py  s3.py  ses.py  sns.py
