[project]
name = "educonnect-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.2",
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.1",
    "flask-swagger-ui>=5.21.0",
    "gunicorn>=23.0.0",
    "jose>=1.0.0",
    "pyjwt[crypto]==2.6.0",
    "pymongo>=4.15.5",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
